--- a/braco_robotico/inverse_knematics/Makefile
+++ b/braco_robotico/inverse_knematics/Makefile
@@ -1,3 +1,3 @@
 all:
-	gcc -Wall -pthread -o inverse_knematics inverse_knematics.c -lpigpio -lrt
+	gcc -Wall -pthread -o inverse_knematics inverse_knematics.c -lpigpio -lrt -lm
 
