Codigo de debug adicionado ao build principal. Funcao de cinematica inversa tridimensional para 3 DOF adicionada.

--- a/imgproc/CMakeLists.txt
+++ b/imgproc/CMakeLists.txt
@@ -11,7 +11,10 @@ include_directories( include ${OpenCV_INCLUDE_DIRS} )
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(motion ${SOURCES})
+add_executable(manual "src/manual.c")
 add_library(inv_kinematics "src/inv_kinematics.c")
 add_library(buttons "src/buttons.c")
 target_link_libraries(motion ${OpenCV_LIBS} pthread pigpio m rt inv_kinematics buttons)
+target_link_libraries(manual ${OpenCV_LIBS} pthread pigpio m rt inv_kinematics)
+install(TARGETS manual DESTINATION bin)
 install(TARGETS motion DESTINATION bin)
